[package]
name = "music_snobster"
version = "0.1.0"
authors = ["rob <robert.l.kelly3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.3"
byteorder = "1.3.2"
id3 = "0.3.0"
ring = "0.16.9"
rust-crypto = "*"
rustc-serialize = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memdb = "1.0"

# p2p
futures = "0.3.1"
libp2p = "0.13.1"
tokio = { version = "0.2", features = ["full"] }
tokio-stdin-stdout = "0.1.5"
tokio-util = { version = "0.2.0", features = ["full"] }

# music file validation
puremp3 = "0.1.0"
lewton = "0.9.4"
rodio = "0.10.0"
cauldron = "0.0.2"
mp3-metadata = "0.3.2"

# tendermint
abci = "0.6.4"
