[package]
name = "music_snobster"
version = "0.1.0"
authors = ["rob <robert.l.kelly3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# args
clap = "2.33.0"

# crypto/serialization
bytes = "0.5.3"
byteorder = "1.3.2"
chrono = "0.4.10"
id3 = "0.3.0"
ring = "0.16.9"
rust-crypto = "*"
rustc-serialize = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# p2p/server/event_loop
# libp2p = "0.13.1"
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
tokio-stdin-stdout = "0.1.5"
tokio-util = { version = "0.2.0", features = ["full"] }

# music file validation
puremp3 = "0.1.0"
lewton = "0.9.4"
rodio = "0.10.0"
cauldron = "0.0.2"
mp3-metadata = "0.3.2"

# tendermint
abci = "0.6.4"

# database (ECS)
specs = { version = "0.15", default-features = false }
legion = "0.2.1"
hibitset = { version = "0.6", default-features = false }
shred = { version = "0.9", default-features = false }
shrev = "1.1"
shred-derive = "0.6"

# GUI
cursive = "0.13.0"

[dev-dependencies]
dirs = "2.0.2"
